cmake_minimum_required (VERSION 2.8.6)
project (hw3)
add_compile_options(-std=gnu++11)
add_compile_options(-Wdeprecated-declarations)
find_package(Eigen3 REQUIRED)
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
file(GLOB sw_srcs "*.h" "*.cpp")
include_directories(${EIGEN3_INCLUDE_DIR} ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} )
add_executable (hw3 ${sw_srcs})
target_link_libraries (hw3 ${EIGEN3_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
